<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.concert_tickets.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/txtTiitle"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtTiitle"
        android:textSize="48sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/txtTiitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:id="@+id/txtTickets"
        android:textSize="36sp"
        android:hint="@string/txtTickets" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtGroup"
        android:layout_below="@+id/txtTickets"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:spinnerMode="dialog"
        android:prompt="@string/prompt"
        android:entries="@array/txtGroup" />

    <Button
        android:text="@string/btnCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnCost"
        android:textSize="34sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/btnCost"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:id="@+id/txtResult"
        android:textSize="22sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/concert"
        android:id="@+id/imgConcert"
        android:layout_marginBottom="9dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/concert"
        android:contentDescription="@string/description" />
</RelativeLayout>
